--- a/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/4.functions-of-mysql-mode/2.functions-of-mysql-mode/1.date-and-time-functions-of-mysql-mode/36.str-to-date-of-mysql-mode.md
+++ b/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/4.functions-of-mysql-mode/2.functions-of-mysql-mode/1.date-and-time-functions-of-mysql-mode/36.str-to-date-of-mysql-mode.md
@@ -118,7 +118,7 @@ STR_TO_DATE(str, format)
       1 row in set, 1 warning 
       ```
 
-有关 `format` 支持的格式，请参见 [DATE_FORMAT](../1.date-and-time-functions-1/10.DATE_FORMAT.md)。
+有关 `format` 支持的格式，请参见 [DATE_FORMAT](../1.date-and-time-functions-of-mysql-mode/10.date-format-of-mysql-mode.md)。
 
 ## 示例
 
