--- a/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/4.functions-of-mysql-mode/2.functions-of-mysql-mode/3.conversion-functions-of-mysql-mode/1.cast-of-mysql-mode.md
+++ b/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/4.functions-of-mysql-mode/2.functions-of-mysql-mode/3.conversion-functions-of-mysql-mode/1.cast-of-mysql-mode.md
@@ -32,7 +32,7 @@ CAST(expr AS type)
 
   * `SIGNED [INTEGER]`：产生一个有符号的 `BIGINT` 值。
 
-  * `JSON`：生成 `JSON` 值。有关 JSON 与其他类型的值转换规则，请参见 [JSON 数据类型转换](../../../1.basic-elements/1.data-type/8.json-formatted-data-type/4.json-formatted-data-type-conversion.md)。
+  * `JSON`：生成 `JSON` 值。有关 JSON 与其他类型的值转换规则，请参见 [JSON 数据类型转换](../../../1.basic-elements-of-mysql-mode/1.data-type-of-mysql-mode/8.json-formatted-data-type-of-mysql-mode/4.json-formatted-data-type-conversion-of-mysql-mode.md)。
 
   * `TIME [ (M) ]`：产生一个 `TIME` 值。 如果给出了可选的 M 值，则它指定小数位上秒的精度。
 
