--- a/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/5.functions-of-oracle-mode/3.aggregate-functions-of-oracle-mode/14.min-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/5.functions-of-oracle-mode/3.aggregate-functions-of-oracle-mode/14.min-of-oracle-mode.md
@@ -21,7 +21,7 @@ MIN([ DISTINCT | UNIQUE | ALL ] expr) [ OVER (analytic_clause) ]
 |---------------------------|-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
 | DISTINCT \| UNIQUE \| ALL | 查询时是否去重，为可选项。默认值 `ALL`。 <ul><li> `ALL`：返回所有值，包含重复行，且忽略值为 `NULL` 的行。   </li><li> `DISTINCT`：返回的行中去除重复行，且忽略值为 `NULL` 的行。   </li><li> `UNIQUE`：返回的行中去除重复行，且忽略值为 `NULL` 的行。</li></ul>    |
 | expr                      | 可为数值、字符、日期型或其它数据类型的列或表达式。                                                                                                                                                                                                                                                               |
-| OVER                      | 使用 `OVER` 子句定义窗口进行计算。详细信息请参见 [分析函数说明](../4.analysis-functions-2/1.window-function-description.md)。                                                                                                                                                                                                 |
+| OVER                      | 使用 `OVER` 子句定义窗口进行计算。详细信息请参见 [分析函数说明](../4.analysis-functions-of-oracle-mode/1.window-function-description-of-oracle-mode.md)。                                                                                                                                                                                                 |
 
 ## 返回类型
 
