--- a/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/5.functions-of-oracle-mode/3.aggregate-functions-of-oracle-mode/19.regr--linear-regression-functions-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/5.functions-of-oracle-mode/3.aggregate-functions-of-oracle-mode/19.regr--linear-regression-functions-of-oracle-mode.md
@@ -40,7 +40,7 @@
 | REGR_SXY       | 返回值等于在忽略空数值对（`expr1`,`expr2`）后的数值对的个数乘以总体协方差，即下面公式的计算结果： ```sql REGR_COUNT(expr1, expr2) * COVAR_POP(expr1, expr2)```                                                                                                                                                                  |
 | expr1          | 指定因变量的值（y 值）。                                                                                                                                                                                                                                                                                                                   |
 | expr2          | 指定自变量的值（x 值）。                                                                                                                                                                                                                                                                                                                   |
-| OVER           | 使用 `OVER` 子句定义窗口进行计算。详细信息请参见 [分析函数说明](../4.analysis-functions-2/1.window-function-description.md)。                                                                                                                                                                                                                                         |
+| OVER           | 使用 `OVER` 子句定义窗口进行计算。详细信息请参见 [分析函数说明](../4.analysis-functions-of-oracle-mode/1.window-function-description-of-oracle-mode.md)。                                                                                                                                                                                                                                         |
 
 >**说明**
 >
