--- a/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/5.functions-of-oracle-mode/4.analysis-functions-of-oracle-mode/19.nth-value-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/5.functions-of-oracle-mode/4.analysis-functions-of-oracle-mode/19.nth-value-of-oracle-mode.md
@@ -20,7 +20,7 @@ OVER (analytic_clause)
 | n                         | 指定返回测量值的第 `n` 行。`n` 取值为正整数。 **注意**  <ul><li> 如果 `n` 是 `NULL`，函数将返回错误。   </li><li> 如果 `n` 大于窗口内所有的行数，函数返回 `NULL`。</li></ul>    |
 | FROM { FIRST \| LAST }    | 指定计算方向。为可选项，默认值为 `FROM FIRST`。 <ul><li> `FROM FIRST` 表示从窗口的第一行开始计算。   </li><li> `FROM LAST` 表示最后一行开始计算。</li></ul>                             |
 | {RESPECT \| IGNORE} NULLS | 表示是否忽略 `NULL` 值，为可选项。默认值为 `RESPECT NULLS`。 <ul><li> `RESPECT  NULLS` 表示不忽略 `NULL` 值。   </li><li> `IGNORE NULLS` 表示忽略 `NULL` 值。</li></ul>      |
-| OVER                      | 使用 `OVER` 子句定义窗口进行计算。详细信息请参见 [分析函数说明](../4.analysis-functions-2/1.window-function-description.md)。                                                                                                                                 |
+| OVER                      | 使用 `OVER` 子句定义窗口进行计算。详细信息请参见 [分析函数说明](1.window-function-description-of-oracle-mode.md)。                                                                                                                                 |
 
 ## 返回类型
 
