--- a/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/5.functions-of-oracle-mode/4.analysis-functions-of-oracle-mode/30.sum-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/5.functions-of-oracle-mode/4.analysis-functions-of-oracle-mode/30.sum-of-oracle-mode.md
@@ -20,7 +20,7 @@ SUM([ DISTINCT | UNQIUE | ALL ] expr) [ OVER (analytic_clause) ]
 |---------------------------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
 | DISTINCT \| UNQIUE \| ALL | 计算时是否去重。为可选项，默认值 `ALL`。 <ul><li> `ALL`：计算所有值，包含重复行，且忽略值为 `NULL` 的行。   </li><li> `DISTINCT`：去除重复行，且忽略值为 `NULL` 的行。   </li><li> `UNIQUE`：去除重复行，且忽略值为 `NULL` 的行。 </li></ul>   |
 | expr                      | 数值数据类型或任何可以隐式转换为数值数据类型的表达式。                                                                                                                                                                                                                                                   |
-| OVER                      | 使用 `OVER` 子句定义窗口进行计算。详细信息请参见 [分析函数说明](../4.analysis-functions-2/1.window-function-description.md)。                                                                                                                                                                                       |
+| OVER                      | 使用 `OVER` 子句定义窗口进行计算。详细信息请参见 [分析函数说明](1.window-function-description-of-oracle-mode.md)。                                                                                                                                                                                       |
 
 >**注意**
 >
