--- a/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/5.functions-of-oracle-mode/4.analysis-functions-of-oracle-mode/34.wmsys-wm-concat-and-wm-concat-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/5.functions-of-oracle-mode/4.analysis-functions-of-oracle-mode/34.wmsys-wm-concat-and-wm-concat-of-oracle-mode.md
@@ -23,7 +23,7 @@ WM_CONCAT ([DISTINCT] measure_expr) [OVER query_partition_clause]
 |--------------|-----------------------------------------------------------------------------------------|
 | DISTINCT     | 如果指定 `DISTINCT`，会在返回结果中删除重复值。为可选项。                                                      |
 | measure_expr | 可以是任何表达式。度量列中的空值将被忽略。                                                                   |
-| OVER         | 使用 `OVER` 子句定义窗口进行计算。详细信息请参见 [分析函数说明](../4.analysis-functions-2/1.window-function-description.md)。 |
+| OVER         | 使用 `OVER` 子句定义窗口进行计算。详细信息请参见 [分析函数说明](1.window-function-description-of-oracle-mode.md)。 |
 
 ## 返回类型
 
