--- a/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/1.basic-elements-of-mysql-mode/1.data-type-of-mysql-mode/8.json-formatted-data-type-of-mysql-mode/3.querying-and-modifying-json-values-of-mysql-mode.md
+++ b/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/1.basic-elements-of-mysql-mode/1.data-type-of-mysql-mode/8.json-formatted-data-type-of-mysql-mode/3.querying-and-modifying-json-values-of-mysql-mode.md
@@ -42,7 +42,7 @@ obclient> SELECT JSON_UNQUOTE(c->'$.name') AS name
 2 rows in set
 ```
 
-由于 JSON 文件是有层级的，所以 JSON 函数需要通过路径表达式提取部分 JSON 文档或修改 JSON 文档的部分内容，还可以指定在文档中的操作位置。有关 JSON 函数的详细信息，请参见 [JSON 函数](t2161150.md#main-2161150)。
+由于 JSON 文件是有层级的，所以 JSON 函数需要通过路径表达式提取部分 JSON 文档或修改 JSON 文档的部分内容，还可以指定在文档中的操作位置。有关 JSON 函数的详细信息，请参见 [JSON 函数](../../../4.functions-of-mysql-mode/7.json-functions-of-mysql-mode/1.create-a-function-with-json-text-of-mysql-mode/1.json-array-of-mysql-mode.md)。
 
 OceanBase 数据库使用路径语法"前导 $ 字符＋符号选择器"来表示正在访问的 JSON 文档，符号选择器的类型如下：
 
