--- a/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/4.functions-of-mysql-mode/2.functions-of-mysql-mode/1.date-and-time-functions-of-mysql-mode/4.current-date-of-mysql-mode.md
+++ b/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/4.functions-of-mysql-mode/2.functions-of-mysql-mode/1.date-and-time-functions-of-mysql-mode/4.current-date-of-mysql-mode.md
@@ -9,7 +9,7 @@ CURRENT_DATE
 
 ## 说明
 
-返回当前日期，不含时间部分。该函数是 [CURDATE](../1.date-and-time-functions-1/3.CURDATE.md) 的别名。
+返回当前日期，不含时间部分。该函数是 [CURDATE](../1.date-and-time-functions-of-mysql-mode/3.curdate-of-mysql-mode.md) 的别名。
 
 ## 示例
 
