--- a/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/4.functions-of-mysql-mode/2.functions-of-mysql-mode/1.date-and-time-functions-of-mysql-mode/46.timestampadd-of-mysql-mode.md
+++ b/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/4.functions-of-mysql-mode/2.functions-of-mysql-mode/1.date-and-time-functions-of-mysql-mode/46.timestampadd-of-mysql-mode.md
@@ -10,7 +10,7 @@ TIMESTAMPADD(unit, interval_expr, date)
 
 日期时间的算术计算。
 
-该函数的作用与 [DATE_ADD](../1.date-and-time-functions-1/9.DATE_ADD.md) 相同，但 `unit` 只能是以下单位：
+该函数的作用与 [DATE_ADD](../1.date-and-time-functions-of-mysql-mode/9.date-add-of-mysql-mode.md) 相同，但 `unit` 只能是以下单位：
 
 * `MICROSECOND`
 
