--- a/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/4.functions-of-mysql-mode/2.functions-of-mysql-mode/4.mathematical-functions-of-mysql-mode/5.atan2-of-mysql-mode.md
+++ b/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/4.functions-of-mysql-mode/2.functions-of-mysql-mode/4.mathematical-functions-of-mysql-mode/5.atan2-of-mysql-mode.md
@@ -10,7 +10,7 @@ ATAN2(X,Y)
 
 返回 `X` 与 `Y` 的反正切。它类似于计算 `Y/X` 的反正切，两个参数的符号用于确定结果所在的象限。
 
-该函数也可写作 `ATAN(X,Y)`，请参见 [ATAN](/zh-CN/10.sql-reference-mysql-mode/4.functions/2.functions-1/4.mathematical-functions/4.ATAN.md)。
+该函数也可写作 `ATAN(X,Y)`，请参见 [ATAN](4.atan-of-mysql-mode.md)。
 
 ## 示例
 
