--- a/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/3.basic-elements-of-oracle-mode/1.built-in-data-types-of-oracle-mode/3.numeric-data-type-of-oracle-mode/1.overview-of-numeric-data-types-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/3.basic-elements-of-oracle-mode/1.built-in-data-types-of-oracle-mode/3.numeric-data-type-of-oracle-mode/1.overview-of-numeric-data-types-of-oracle-mode.md
@@ -2,7 +2,7 @@
 
 数值类型用于存储定点数、浮点数和零。OceanBase 数据库提供了四种存储数值的数据类型，分别是 NUMBER、FLOAT、BINARY_FLOAT 和 BINARY_DOUBLE。本文主要提供 OceanBase 数据库当前版本所支持数据类型的概览。
 
-在数值计算时，数值类型具有不同的优先级，具体信息请参见 [数值类型的优先级](../3.numeric-data-type/5.numeric-priority.md)。
+在数值计算时，数值类型具有不同的优先级，具体信息请参见 [数值类型的优先级](../3.numeric-data-type-of-oracle-mode/5.numeric-priority-of-oracle-mode.md)。
 
 OceanBase 数据库当前版本所支持的数值数据类型的相关信息如下表所示。
 
