--- a/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/3.basic-elements-of-oracle-mode/1.built-in-data-types-of-oracle-mode/4.date-time-and-interval-data-types-of-oracle-mode/5.timestamp-with-local-time-zone-data-type-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/3.basic-elements-of-oracle-mode/1.built-in-data-types-of-oracle-mode/4.date-time-and-interval-data-types-of-oracle-mode/5.timestamp-with-local-time-zone-data-type-of-oracle-mode.md
@@ -27,7 +27,7 @@ SELECT @@NLS_TIMESTAMP_FORMAT FROM DUAL;
 DD-MON-RR HH.MI.SSXFF AM
 ```
 
-如果需要自定义数据的格式，可以使用转换函数。可以通过函数 TO_CHAR (datetime,fmt) 指定数据的输出格式。这个转换函数会将字符串转化为参数 `fmt` 中定义的格式。在 `fmt` 未指明的情况下 `TO_CHAR` 按数据类型的默认格式返回数据。关于 `TIMESTAMP WITH LOCAL TIME ZONE` 数据类型值的输入格式，请参见 [时间戳字面量](/zh-CN/11.sql-reference-oracle-mode/3.basic-elements-1/3.literal-1/4.date-and-time-literal/2.timestamp-literal.md)。
+如果需要自定义数据的格式，可以使用转换函数。可以通过函数 TO_CHAR (datetime,fmt) 指定数据的输出格式。这个转换函数会将字符串转化为参数 `fmt` 中定义的格式。在 `fmt` 未指明的情况下 `TO_CHAR` 按数据类型的默认格式返回数据。关于 `TIMESTAMP WITH LOCAL TIME ZONE` 数据类型值的输入格式，请参见 [时间戳字面量](../../3.literal-of-oracle-mode/4.date-and-time-literal-of-oracle-mode/2.timestamp-literal-of-oracle-mode.md)。
 
 `TIMESTAMP WITH LOCAL TIME ZONE` 数据类型没有专门的字面量为其赋值，时区信息由 `SESSIONTIMEZONE` 返回本地对话时区。`SESSIONTIMEZONE` 的值取自自定义参数 `TIME_ZONE`，示例如下：
 
