--- a/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/3.basic-elements-of-oracle-mode/1.built-in-data-types-of-oracle-mode/4.date-time-and-interval-data-types-of-oracle-mode/6.interval-year-to-month-data-type-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/3.basic-elements-of-oracle-mode/1.built-in-data-types-of-oracle-mode/4.date-time-and-interval-data-types-of-oracle-mode/6.interval-year-to-month-data-type-of-oracle-mode.md
@@ -16,7 +16,7 @@ INTERVAL YEAR [(precision)] TO MONTH
 
 在插入 `INTERVAL YEAR TO MONTH` 数据类型的值时，所支持的格式如下表所示。
 
-更多关于间隔数据类型值的指定请参见 [间隔字面量](../../3.literal-1/5.interval-literal.md)。
+更多关于间隔数据类型值的指定请参见 [间隔字面量](../../3.literal-of-oracle-mode/5.interval-literal-of-oracle-mode.md。
 
 |                     **语法**                     |               **示例**               |                            **说明**                            |
 |------------------------------------------------|------------------------------------|--------------------------------------------------------------|
@@ -50,7 +50,7 @@ obclient> SELECT * FROM Interval_Sample;
 
 OceanBase 数据库支持数据类型间的转换，所以间隔数据类型的值可以与其他日期值进行数学运算，但是数据库并不支持数据类型间的进行任意加、减、乘、除运算。
 
-如果想查看目前支持的日期类型计算矩阵图并了解数更多数据类型转换的信息。请参见 [日期时间 DATE 和间隔 INTERVAL 的计算](../4.date-time-and-interval-data-types/8.calculation-of-date-time-and-interval.md) 和 [数据类型转换规则](../../2.data-type-comparison-rules/6.data-type-conversion.md)。
+如果想查看目前支持的日期类型计算矩阵图并了解数更多数据类型转换的信息。请参见 [日期时间 DATE 和间隔 INTERVAL 的计算](../4.date-time-and-interval-data-types-of-oracle-mode/8.calculation-of-date-time-and-interval-of-oracle-mode.md) 和 [数据类型转换规则](../../2.data-type-comparison-rules-of-oracle-mode/6.data-type-conversion-of-oracle-mode.md)。
 
 * 间隔与间隔的计算，返回的值仍为间隔数据类型。示例如下：
 
