--- a/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/5.functions-of-oracle-mode/3.aggregate-functions-of-oracle-mode/2.avg-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/5.functions-of-oracle-mode/3.aggregate-functions-of-oracle-mode/2.avg-of-oracle-mode.md
@@ -20,7 +20,7 @@ AVG([ DISTINCT | UNIQUE | ALL ] expr) [ OVER (analytic_clause) ]
 |---------------------------|--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
 | DISTINCT \| UNIQUE \| ALL | 查询时是否去重。为可选项，默认值 `ALL`。 <ul><li> `ALL`：查询时不去除数据中的重复值，且忽略数据中的 `NULL` 值。   </li><li> `DISTINCT`：查询时去除数据中的重复值，且忽略数据中的 `NULL` 值。   </li><li> `UNIQUE`：查询时去除数据中的重复值，且忽略数据中的 `NULL` 值。</li></ul>    |
 | expr                      | 指定要计算的列名。列的数据类型是数值类型或者可以转换成数值类型的表达式。数值类型可以为 `NUMBER`、`FLOAT`、`BINARY_FLOAT` 或 `BINARY_DOUBLE`。                                                                                                                                                                                                   |
-| OVER                      | 使用 `OVER` 子句定义窗口进行计算。详细信息请参见 [分析函数说明](../4.analysis-functions-2/1.window-function-description.md)。                                                                                                                                                                                                          |
+| OVER                      | 使用 `OVER` 子句定义窗口进行计算。详细信息请参见 [分析函数说明](../4.analysis-functions-of-oracle-mode/1.window-function-description-of-oracle-mode.md)。                                                                                                                                                                                                          |
 
 >**注意**
 >
