--- a/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/5.functions-of-oracle-mode/3.aggregate-functions-of-oracle-mode/23.stddev-samp-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/5.functions-of-oracle-mode/3.aggregate-functions-of-oracle-mode/23.stddev-samp-of-oracle-mode.md
@@ -21,7 +21,7 @@ STDDEV_SAMP([ALL] expr) [ OVER (analytic_clause) ]
 |------|-----------------------------------------------------------------------------------------|
 | ALL  | 全部数值列。为可选项，默认值 `ALL`。                                                                   |
 | expr | 数值类型（`NUMBER`、`FLOAT`、`BINARY_FLOAT` 和 `BINARY_DOUBLE`）或者可以转换成数值类型的表达式。                 |
-| OVER | 使用 `OVER` 子句定义窗口进行计算。详细信息请参见 [分析函数说明](../4.analysis-functions-2/1.window-function-description.md)。 |
+| OVER | 使用 `OVER` 子句定义窗口进行计算。详细信息请参见 [分析函数说明](../4.analysis-functions-of-oracle-mode/1.window-function-description-of-oracle-mode.md)。 |
 
 ## 返回类型
 
