--- a/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/5.functions-of-oracle-mode/3.aggregate-functions-of-oracle-mode/5.covar-pop-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/5.functions-of-oracle-mode/3.aggregate-functions-of-oracle-mode/5.covar-pop-of-oracle-mode.md
@@ -20,7 +20,7 @@ COVAR_POP(expr1, expr2)[ OVER (analytic_clause) ]
 |-------|-----------------------------------------------------------------------------------------|
 | expr1 | 指定第一个数值表达式，属于数值数据类型或可以隐式转换为数值数据类型的值。                                                    |
 | expr2 | 指定第二个数值表达式，属于数值数据类型或可以隐式转换为数值数据类型的值。                                                    |
-| OVER  | 使用 `OVER` 子句定义窗口进行计算。详细信息请参见 [分析函数说明](../4.analysis-functions-2/1.window-function-description.md)。 |
+| OVER  | 使用 `OVER` 子句定义窗口进行计算。详细信息请参见 [分析函数说明](../4.analysis-functions-of-oracle-mode/1.window-function-description-of-oracle-mode.md)。 |
 
 >**说明**
 >
