--- a/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/5.functions-of-oracle-mode/3.aggregate-functions-of-oracle-mode/7.cume-dist-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/5.functions-of-oracle-mode/3.aggregate-functions-of-oracle-mode/7.cume-dist-of-oracle-mode.md
@@ -29,7 +29,7 @@ CUME_DIST() OVER ([ query_partition_clause ] order_by_clause)
 | expr_col                | 指定要查询的值对应的列名。                                                                                                                                                                                                            |
 | DESC \| ASC             | 指定列表的排序方式，为可选项。 *`ASC` 为升序排序，为默认值。* `DESC` 为降序排序。                                                                 |
 | NULLS { FIRST \| LAST } | 排序后 `expr_col` 中 `NULL` 值的位置，为可选项。 *`NULLS FIRST` 表示 `NULL` 值排在非空值的前面。* `NULLS LAST` 表示 `NULL` 值排在非空值的后面，为默认值。    |
-| OVER                    | 使用 `OVER` 子句定义窗口进行计算。详细信息请参见 [分析函数说明](../4.analysis-functions-2/1.window-function-description.md)。                                                                                                                                  |
+| OVER                    | 使用 `OVER` 子句定义窗口进行计算。详细信息请参见 [分析函数说明](../4.analysis-functions-of-oracle-mode/1.window-function-description-of-oracle-mode.md)。                                                                                                                                  |
 
 ## 返回类型
 
