--- a/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/5.functions-of-oracle-mode/4.analysis-functions-of-oracle-mode/26.row-number-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/5.functions-of-oracle-mode/4.analysis-functions-of-oracle-mode/26.row-number-of-oracle-mode.md
@@ -12,7 +12,7 @@ ROW_NUMBER( ) OVER ([ query_partition_clause ] order_by_clause)
 
 ## 参数解释
 
-使用 `OVER` 子句定义窗口进行计算。详细信息请参见 [分析函数说明](../4.analysis-functions-2/1.window-function-description.md)。
+使用 `OVER` 子句定义窗口进行计算。详细信息请参见 [分析函数说明](1.window-function-description-of-oracle-mode.md)。
 
 ## 返回类型
 
