--- a/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/1.basic-elements-of-mysql-mode/1.data-type-of-mysql-mode/1.data-type-overview-of-mysql-mode.md
+++ b/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/1.basic-elements-of-mysql-mode/1.data-type-of-mysql-mode/1.data-type-overview-of-mysql-mode.md
@@ -8,7 +8,7 @@ OceanBase 数据库当前版本支持如下 MySQL 数据类型：
 
 * [日期时间类型](3.date-and-time-types-of-mysql-mode/1.date-and-time-types-of-mysql-mode.md)
 
-* [字符类型](4.string-of-mysql-mode/1.string-type-overview-of-mysql-mode.mdd)
+* [字符类型](4.string-of-mysql-mode/1.string-type-overview-of-mysql-mode.md)
 
 * [大对象类型](5.large-object-of-mysql-mode/1.large-object-and-text-type-overview-of-mysql-mode.md)
 
