--- a/zh-CN/7.reference/7.command-line-tools/8.ob-agent/4.obagent-metrics/2.system-statistics.md
+++ b/zh-CN/7.reference/7.command-line-tools/8.ob-agent/4.obagent-metrics/2.system-statistics.md
@@ -8,4 +8,4 @@
 obclient> SELECT name,class FROM v$statname ORDER BY name;
 ```
 
-常见统计事件会不断更新，最新版本请参考 [常见统计事件说明](../../../../7.reference/3.system-views/2.statistical-event-description.md)。
+v$statname 视图的详细信息，请参见 [v$statname](../../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/3.performance-view-of-mysql-mode/56.v-statname-of-mysql-mode.md)。
