--- a/zh-CN/7.reference/2.administrator-guide/5.backup-and-recovery/1.flashback/2.database-table-and-index-recycle-bin.md
+++ b/zh-CN/7.reference/2.administrator-guide/5.backup-and-recovery/1.flashback/2.database-table-and-index-recycle-bin.md
@@ -174,7 +174,7 @@ OceanBase 数据库当前支持通过集群级配置项 `recyclebin_object_expir
 
 * 值为非 `0s` 时，表示回收一段时间前进入回收站的 Schema 对象。
 
-更多配置项 `recyclebin_object_expire_time` 的说明信息请参见 [recyclebin_object_expire_time](../../14.system-reference/1.system-configuration-items/3.cluster-level-configuration-items-1/166.recyclebin_object_expire_time-1-2-3.md)。
+更多配置项 `recyclebin_object_expire_time` 的说明信息请参见 [recyclebin_object_expire_time](../../../5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/166.recyclebin_object_expire_time.md)。
 
 开启自动清理回收站的操作如下：
 
