--- a/zh-CN/7.reference/2.administrator-guide/5.backup-and-recovery/2.backup-and-restoration-management/4.data-backup/5.view-data-backup-progress.md
+++ b/zh-CN/7.reference/2.administrator-guide/5.backup-and-recovery/2.backup-and-restoration-management/4.data-backup/5.view-data-backup-progress.md
@@ -89,7 +89,7 @@
 
   上面的示例中，租户 ID 为 `1002` 的租户正在进行数据备份，其备份目的端为 `file:///data/nfs/backup/data` , 当前的数据备份状态为 `DOING`。
 
-   更多 `CDB_OB_BACKUP_JOBS` 和 `CDB_OB_BACKUP_TASKS` 视图的说明，请参见 [CDB_OB_BACKUP_JOBS](../../../../14.system-reference/4.system-view-for-mysql/2.dictionary-view-5/119.oceanbase-cdb_ob_backup_jobs.md) 和 [CDB_OB_BACKUP_TASKS](../../../../14.system-reference/4.system-view-for-mysql/2.dictionary-view-5/123.oceanbase-cdb_ob_backup_tasks.md)。
+   更多 `CDB_OB_BACKUP_JOBS` 和 `CDB_OB_BACKUP_TASKS` 视图的说明，请参见 [CDB_OB_BACKUP_JOBS](../../../../5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/119.oceanbase-cdb_ob_backup_jobs-of-mysql-mode.md) 和 [CDB_OB_BACKUP_TASKS](../../../../5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/123.oceanbase-cdb_ob_backup_tasks-of-mysql-mode.md)。
 
 ## 相关阅读
 
