--- a/zh-CN/7.reference/2.administrator-guide/6.data-security-management/4.audit-database/2.start-auditing.md
+++ b/zh-CN/7.reference/2.administrator-guide/6.data-security-management/4.audit-database/2.start-auditing.md
@@ -43,7 +43,7 @@
    obclient> ALTER SYSTEM SET audit_trail = 'DB,EXTENDED';
    ```
 
-   有关 `audit_trail` 配置项的详细信息，请参见 [audit_trail](../../../7.reference/14.system-reference/1.system-configuration-items/4.tenant-level-configuration-items-1/2.audit_trail-1-2-3.md) 。
+   有关 `audit_trail` 配置项的详细信息，请参见 [audit_trail](../../../5.system-reference/1.system-configuration-items/4.tenant-level-configuration-items/2.audit_trail.md) 。
 
       > **说明**
       >
@@ -54,7 +54,7 @@
 
 ## 设置审计规则
 
-使用 `AUDIT` 语句设置审计规则。可以设置语句审计操作类型和对象审计操作类型的审计规则。有关设置审计规则的详细信息，请参见 [AUDIT](../../../7.reference/6.sql-syntax/3.common-tenant-oracle-mode/9.sql-statement-1/3.DCL/2.AUDIT.md)。
+使用 `AUDIT` 语句设置审计规则。可以设置语句审计操作类型和对象审计操作类型的审计规则。有关设置审计规则的详细信息，请参见 [AUDIT](../../../../7.reference/5.system-reference/1.system-configuration-items/4.tenant-level-configuration-items/2.audit_trail.md)。
 
 对用户 `user1` 的表 `tbl1` 的所有 `INSERT`、`UPDATE` 和 `DELETE` 操作进行审计。
 
@@ -68,9 +68,9 @@ obclient> AUDIT INSERT,UPDATE,DELETE ON user1.tbl1;
 
 |                                字典视图                                |                                                                                                                                               功能说明                                                                                                                                                |
 |--------------------------------------------------------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| [ALL_DEF_AUDIT_OPTS](../../../7.reference/14.system-reference/5.system-view-for-oracle/2.dictionary-view-6/9.ALL_DEF_AUDIT_OPTS-1.md)  | 记录任何新创建对象的默认审计规则。每列的取值如下： *`-/-`：默认不审计* `A/-`: 只在语句执行成功时审计  *`-/A`: 只在语句执行失败时审计* `A/A`: 语句执行无论成功还是失败时都审计   |
-| [DBA_STMT_AUDIT_OPTS](../../../7.reference/14.system-reference/5.system-view-for-oracle/2.dictionary-view-6/100.DBA_STMT_AUDIT_OPTS-1.md) | 记录语句级别审计的详细配置。                                                                                                                                                                                                                                                                                    |
-| [DBA_OBJ_AUDIT_OPTS](../../../7.reference/14.system-reference/5.system-view-for-oracle/2.dictionary-view-6/85.DBA_OBJ_AUDIT_OPTS-1.md)  | 记录对象级别审计的详细配置。                                                                                                                                                                                                                                                                                    |
+| [ALL_DEF_AUDIT_OPTS](../../../../7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/9.all_def_audit_opts-of-oracle-mode.md)  | 记录任何新创建对象的默认审计规则。每列的取值如下： *`-/-`：默认不审计* `A/-`: 只在语句执行成功时审计  *`-/A`: 只在语句执行失败时审计* `A/A`: 语句执行无论成功还是失败时都审计   |
+| [DBA_STMT_AUDIT_OPTS](../../../../7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/100.dba_stmt_audit_opts-of-oracle-mode.md) | 记录语句级别审计的详细配置。                                                                                                                                                                                                                                                                                    |
+| [DBA_OBJ_AUDIT_OPTS](../../../../7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/85.dba_obj_audit_opts-of-oracle-mode.md)  | 记录对象级别审计的详细配置。                                                                                                                                                                                                                                                                                    |
 
 查看 `ALL_DEF_AUDIT_OPTS` 中的审计规则。示例如下：
 
@@ -117,15 +117,15 @@ obclient> SELECT * FROM SYS.ALL_DEF_AUDIT_OPTS;
   
   |                                字典视图                                 |                                   功能说明                                    |
   |---------------------------------------------------------------------|---------------------------------------------------------------------------|
-  | [DBA_AUDIT_EXISTS](../../../7.reference/14.system-reference/5.system-view-for-oracle/2.dictionary-view-6/56.DBA_AUDIT_EXISTS-1.md)     | 显示 `AUDIT EXISTS` 和 `AUDIT NOT EXISTS` 产生的审计跟踪条目。                         |
-  | [DBA_AUDIT_OBJECT](../../../7.reference/14.system-reference/5.system-view-for-oracle/2.dictionary-view-6/57.DBA_AUDIT_OBJECT-1.md)     | 显示数据库中所有对象的审计跟踪条目。                                                        |
-  | [DBA_AUDIT_SESSION](../../../7.reference/14.system-reference/5.system-view-for-oracle/2.dictionary-view-6/58.DBA_AUDIT_SESSION-1.md)    | 显示所有关于 `CONNECT` 和 `DISCONNECT` 的审计跟踪条目。                                  |
-  | [DBA_AUDIT_STATEMENT](../../../7.reference/14.system-reference/5.system-view-for-oracle/2.dictionary-view-6/59.DBA_AUDIT_STATEMENT-1.md)  | 显示整个数据库中关于 `GRANT`、`REVOKE`、`AUDIT`、`NOAUDIT`和 `ALTER SYSTEM`语句的审计跟踪条目。 |
-  | [DBA_AUDIT_TRAIL](../../../7.reference/14.system-reference/5.system-view-for-oracle/2.dictionary-view-6/60.DBA_AUDIT_TRAIL-1.md)      | 显示所有的审计跟踪条目。                                                              |
-  | [USER_AUDIT_OBJECT](../../../7.reference/14.system-reference/5.system-view-for-oracle/2.dictionary-view-6/144.USER_AUDIT_OBJECT-1.md)    | 显示当前用户可访问的对象的审计跟踪条目。                                                      |
-  | [USER_AUDIT_SESSION](../../../7.reference/14.system-reference/5.system-view-for-oracle/2.dictionary-view-6/145.USER_AUDIT_SESSION-1.md)   | 显示关于当前用户的连接和断开的审计跟踪条目。                                                    |
-  | [USER_AUDIT_STATEMENT](../../../7.reference/14.system-reference/5.system-view-for-oracle/2.dictionary-view-6/146.USER_AUDIT_STATEMENT-1.md) | 显示当前用户发出的 `GRANT`、`REVOKE`、`AUDIT`、`NOAUDIT` 和 `ALTER SYSTEM` 语句的审计跟踪条目。  |
-  | [USER_AUDIT_TRAIL](../../../7.reference/14.system-reference/5.system-view-for-oracle/2.dictionary-view-6/147.USER_AUDIT_TRAIL-1.md)     | 显示与当前用户相关的所有审计跟踪条目。                                                       |
+  | [DBA_AUDIT_EXISTS](../../../../7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/56.dba_audit_exists-of-oracle-mode.md)     | 显示 `AUDIT EXISTS` 和 `AUDIT NOT EXISTS` 产生的审计跟踪条目。                         |
+  | [DBA_AUDIT_OBJECT](../../../../7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/57.dba_audit_object-of-oracle-mode.md)     | 显示数据库中所有对象的审计跟踪条目。                                                        |
+  | [DBA_AUDIT_SESSION](../../../../7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/58.dba_audit_session-of-oracle-mode.md)    | 显示所有关于 `CONNECT` 和 `DISCONNECT` 的审计跟踪条目。                                  |
+  | [DBA_AUDIT_STATEMENT](../../../../7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/59.dba_audit_statement-of-oracle-mode.md)  | 显示整个数据库中关于 `GRANT`、`REVOKE`、`AUDIT`、`NOAUDIT`和 `ALTER SYSTEM`语句的审计跟踪条目。 |
+  | [DBA_AUDIT_TRAIL](../../../../7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/60.dba_audit_trail-of-oracle-mode.md)      | 显示所有的审计跟踪条目。                                                              |
+  | [USER_AUDIT_OBJECT](../../../../7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/144.user_audit_object-of-oracle-mode.md)    | 显示当前用户可访问的对象的审计跟踪条目。                                                      |
+  | [USER_AUDIT_SESSION](../../../../7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/145.user_audit_session-of-oracle-mode.md)   | 显示关于当前用户的连接和断开的审计跟踪条目。                                                    |
+  | [USER_AUDIT_STATEMENT](../../../../7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/146.user_audit_statement-of-oracle-mode.md) | 显示当前用户发出的 `GRANT`、`REVOKE`、`AUDIT`、`NOAUDIT` 和 `ALTER SYSTEM` 语句的审计跟踪条目。  |
+  | [USER_AUDIT_TRAIL](../../../../7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/147.user_audit_trail-of-oracle-mode.md)     | 显示与当前用户相关的所有审计跟踪条目。                                                       |
 
   查看 `DBA_AUDIT_TRAIL` 中的审计记录。示例如下：
 
