Fixed 340, The setting of password in RDB adapter is wrong

--- a/zh-CN/6.data-migration/2.migrate-data-from-MySQL-database-to-OceanBase-database/7.use-canal-to-synchronize-MySQL-data-to-OceanBase-database-in-real-time.md
+++ b/zh-CN/6.data-migration/2.migrate-data-from-MySQL-database-to-OceanBase-database/7.use-canal-to-synchronize-MySQL-data-to-OceanBase-database-in-real-time.md
@@ -1,6 +1,6 @@
 # 使用 Canal 将 MySQL 数据实时同步到 OceanBase 数据库
 
-`Canal` 是 Alibaba 开源的一个产品，主要用途是基于 MySQL 数据库增量日志解析，提供增量数据订阅和消费。开源项目地址：<https://github.com/alibaba/canal>。
+`Canal` 是 Alibaba 开源的一个产品，主要用途是基于 MySQL 数据库增量日志解析，提供增量数据订阅和消费。开源项目地址：<https://github.com/alibaba/canal>。建议使用 Canal 1.1.5 版本, 1.1.6 和 1.1.7 版本在使用过程中, 可能会出现非预期问题。
 
 ## 架构原理
 
@@ -65,6 +65,7 @@ server_id=1 # 配置 MySQL replaction 需要定义，不要和 canal 的 slaveId
 CREATE USER canal IDENTIFIED BY 'canal';  
 GRANT SELECT, REPLICATION SLAVE, REPLICATION CLIENT ON *.* TO 'canal'@'%';
 -- GRANT ALL PRIVILEGES ON *.* TO 'canal'@'%' ;
+GRANT ALL PRIVILEGES ON canal_manager.* TO 'canal'@'%' ;
 FLUSH PRIVILEGES;
 ```
 
@@ -346,8 +347,9 @@ Adapter 的需要手动部署。
       canal.tcp.server.host: 127.0.0.1:11111
       canal.tcp.zookeeper.hosts:
       canal.tcp.batch.size: 500
-      canal.tcp.username: tpch
-      canal.tcp.password: Dg0gIe****
+      # 此处为在~/canal/conf/canal.properties 中 canal.admin.user/canal.admin.passwd
+      canal.tcp.username: admin
+      canal.tcp.password: admin
     canalAdapters:
     - instance: mariadb # canal instance Name or mq topic name
       groups:
@@ -362,6 +364,15 @@ Adapter 的需要手动部署。
             jdbc.username: ****@obmysql#obdemo
             jdbc.password: Dg0gIe****  
   ```
+* 修改启动器配置：`conf/bootstrap.yml`, 修改源mysql的数据库连接
+```yaml
+canal:
+  manager:
+    jdbc:
+      url: jdbc:mysql://127.0.0.1:3306/canal_manager?useUnicode=true&characterEncoding=UTF-8
+      username: canal
+      password: canal
+```
 
 * RDB 映射文件
 
