修改大纲并同步部分内容

--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/3.restart-a-node.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/3.restart-a-node.md
@@ -1,22 +1,6 @@
 # 重启节点
 
-重启节点是通过一系列操作将节点停止后再重新启动的一个过程。
-
-## 注意事项
-
-为减少重启节点对业务产生的影响，建议您在夜间业务量少的时间段进行重启。
-
-此外，为了避免影响正在运行的业务，重启节点推荐按照以下操作顺序来执行：
-
-1. 停止节点服务。
-
-2. 对节点进行转储操作，以便加速重启。
-
-3. 停止 observer 进程。
-
-4. 启动 observer 进程。
-
-5. 启动节点服务。
+重启是常用运维动作之一，重启节点可以解决 observer 进程的一部分问题，或者对机器进行短暂维修（节点下线时间需要在 `server_permanent_offline_time` 以内，否则会被永久下线）。如果长时间维修，需要走机器替换流程。
 
 ## 重启节点
 
@@ -30,7 +14,7 @@
    [admin@xxx oceanbase]$ obclient -h10.xx.xx.xx -P2883 -uroot@sys -p***** -A
    ```
 
-2. 执行以下命令，停止节点服务。
+2. 执行以下命令，进行节点隔离。
 
    ```sql
    obclient [none]> ALTER SYSTEM STOP SERVER 'ip:port';
@@ -48,11 +32,11 @@
    obclient [none]> ALTER SYSTEM STOP SERVER 'xx.xx.xx.10:2882';
    ```
 
-   执行成功后，可以查询 `oceanbase.DBA_OB_SERVERS` 视图中该 Server 的 `STATUS` 字段，字段值仍为 `ACTIVE` 不变，但 `STOP_TIME` 字段的值由 `NULL` 变为停止服务的时间点。
+   执行成功后，可以查询 `oceanbase.DBA_OB_SERVERS` 视图中该 Server 的 `STATUS` 字段，可以看到字段值仍为 `ACTIVE` 不变，但 `STOP_TIME` 字段的值由 `NULL` 变为停止服务的时间点。
 
    查询 `oceanbase.DBA_OB_SERVERS` 视图的具体操作可参见 [查看节点](../2.view-the-cluster-composition/2.view-an-observer.md)。
 
-3. 执行以下命令，对待重启的节点进行转储操作。
+3. 执行以下命令，对待重启的节点进行转储操作，以便缩短重启后回放 Redolog 的时间，加速重启。
 
    ```sql
    obclient [none]> ALTER SYSTEM MINOR FREEZE SERVER = ('ip:port');
