--- a/zh-CN/7.reference/2.administrator-guide/7.management/5.emergency-response/1.database-contingency-overview.md
+++ b/zh-CN/7.reference/2.administrator-guide/7.management/5.emergency-response/1.database-contingency-overview.md
@@ -66,4 +66,5 @@
 
 * buffer 表问题
 
-上述三类问题，有些问题直接表现为"现象"，有些则是导致其他异常现象的原因。关于如何针对这些不同的应急场景进行正确的处理，请参见 [分析诊断\&决策流程](../8.emergency-response/2.analysis-diagnosis-and-decision-making-process.md)。
+上述三类问题，有些问题直接表现为"现象"，有些则是导致其他异常现象的原因。关于如何针对这些不同的应急场景进行正确的处理，请参见 [分析诊断\&决策流程](../5.emergency-response/2.analysis-diagnosis-and-decision-making-process.md
+)。
