--- a/zh-CN/7.reference/2.administrator-guide/7.management/5.emergency-response/3.common-emergency-response/2.problems-caused-by-capacity-changes/2.the-disk-i-o-of-the-node-is-too-high.md
+++ b/zh-CN/7.reference/2.administrator-guide/7.management/5.emergency-response/3.common-emergency-response/2.problems-caused-by-capacity-changes/2.the-disk-i-o-of-the-node-is-too-high.md
@@ -47,7 +47,7 @@
    SHOW PARAMETERS LIKE 'minor_merge_concurrency';
    ```
 
-   您还可以在 OCP 界面通过修改转储策略调低转储线程数，具体参见 [修改转储配置](../../../../6.basic-database-management/5.manage-data-storage/1.dump-management-1/5.modify-dump-configuration.md)。
+   您还可以在 OCP 界面通过修改转储策略调低转储线程数，具体参见 [修改转储配置](../../../../2.basic-database-management/5.manage-data-storage/1.dump-management/5.modify-dump-configuration.md)。
 
 5. 调低迁移复制的并发数。
 
