--- a/zh-CN/7.reference/8.supporting-tools/3.ob_error.md
+++ b/zh-CN/7.reference/8.supporting-tools/3.ob_error.md
@@ -1,6 +1,6 @@
 # ob_error
 
-`ob_error` 是 OceanBase 数据库的一个错误码解析工具，`ob_error` 可以根据您输入的错误码返回相对应的原因和解决方案。在 `ob_error` 的帮助下，您无需查找文档即可获取基本的错误信息。
+ob_error 是 OceanBase 数据库的一个错误码解析工具，ob_error 可以根据您输入的错误码返回相对应的原因和解决方案。在 ob_error 的帮助下，您无需查找文档即可获取基本的错误信息。
 
 ## 如何构建
 
@@ -20,7 +20,7 @@ make ob_error
 cp tools/ob_error/src/ob_error /usr/local/bin
 ```
 
-`ob_error` 的编译产物默认存储在 `DEBUG_BUILD_DIR/tools/ob_error/src/ob_error` 中。
+ob_error 的编译产物默认存储在 `DEBUG_BUILD_DIR/tools/ob_error/src/ob_error` 中。
 
 ### Release 模式
 
@@ -31,18 +31,18 @@ make ob_error
 cp tools/ob_error/src/ob_error /usr/local/bin
 ```
 
-`ob_error` 的编译产物默认存储在 `RELEASE_BUILD_DIR/tools/ob_error/src/ob_error` 中。
+ob_error 的编译产物默认存储在 `RELEASE_BUILD_DIR/tools/ob_error/src/ob_error` 中。
 
 ### RPM 安装包
 
-`ob_error` 在安装包 `oceanbase-ce-utils-3.1.1-4.el7.x86_64.rpm` 中提供，您可访问 [下载页面](https://open.oceanbase.com/softwareCenter/community) 下载该安装包。
+ob_error 在安装包 `oceanbase-ce-utils-3.1.1-4.el7.x86_64.rpm` 中提供，您可访问 [下载页面](https://open.oceanbase.com/softwareCenter/community) 下载该安装包。
 之后可运行以下命令进行安装：
 
 ```bash
 rpm -ivh oceanbase-ce-utils-3.1.1-4.el7.x86_64.rpm
 ```
 
-如果您只需要 `ob_error`，可使用 `rpm2cpio` 命令来获取 `ob_error`。
+如果您只需要 ob_error，可使用 `rpm2cpio` 命令来获取 ob_error。
 
 ```bash
 rpm2cpio oceanbase-ce-utils-3.1.1-4.el7.x86_64.rpm | cpio -idmv ./home/admin/oceanbase/bin/ob_error
@@ -171,4 +171,4 @@ cd src/share
 ./gen_errno.pl
 ```
 
-之后在 `BUILD_DIR` 中重新编译 `ob_error` 即可完成添加。
+之后在 `BUILD_DIR` 中重新编译 ob_error 即可完成添加。
