--- a/zh-CN/5.administrator-guide/10.high-data-availability/1.administrator-guide-flashback/4.flashback-recycle-bin-object.md
+++ b/zh-CN/5.administrator-guide/10.high-data-availability/1.administrator-guide-flashback/4.flashback-recycle-bin-object.md
@@ -141,4 +141,4 @@
    Empty set
    ```
 
-更多 `FLASHBACK` 语句的说明信息，请参见 [FLASHBACK](../../../10.sql-reference-mysql-mode/6.sql-statement/43.flashback-database.md)
+更多 `FLASHBACK` 语句的说明信息，请参见 [FLASHBACK](../../../7.reference/2.sql-syntax/2.common-tenant-mysql-mode/6.sql-statement/34.flashback-database.md)
