更改内容后提交

--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/1.view-a-zone.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/1.view-a-zone.md
@@ -2,7 +2,7 @@
 
 一个 OceanBase 集群由若干个 Zone 组成。从物理层面来讲，一个 Zone 通常等价于一个机房、一个数据中心或一个 IDC。
 
-## 查看 zone 信息
+## 操作步骤
 
 1. 使用 `root` 用户登录到数据库的 `sys` 租户。
 
@@ -44,6 +44,8 @@
    * `TYPE`：Zone 类型，`ReadWrite` 表示读写类型，当前版本仅支持读写类型的 Zone。
 
 ## 相关文档
+
+更多 Zone 相关的运维操作，请参见以下信息：
 
 * [添加 Zone](7.add-a-zone.md)
 
