--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/3.restart-a-node.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/3.restart-a-node.md
@@ -68,12 +68,17 @@
 
       ```bash
       [admin@xxx oceanbase]$ ps -ef | grep observer | grep -v grep
+      admin       6136      0 99 11:23 ?        00:00:19 ./bin/observer
       ```
+
+      示例中，`6136` 即为节点的进程 ID。
 
    4. 停止 observer 进程。
 
+      命令如下：
+
       ```bash
-      [admin@xxx oceanbase]$ kill -15 pid
+      [admin@xxx oceanbase]$ kill -9 pid
       ```
 
       其中，`pid` 为待停止的节点的 observer 进程 ID。
@@ -81,55 +86,30 @@
       示例如下：
 
       ```bash
-      [admin@xxx oceanbase]$ kill -15 6136
+      [admin@xxx oceanbase]$ kill -9 6136
       ```
-
-      如果进程停止失败，可以执行 `kill -9 pid` 命令强制停止该进程。
 
    5. 执行以下命令，确认进程是否已停止。
 
        ```bash
-       [admin@xxx oceanbase]$ ps -ef | grep observer | grep -v grep
+       [admin@xxx oceanbase]$ ps aux | grep observer
        ```
 
        如果命令执行后没有返回信息，则表示进程停止成功。
 
-5. 启动 observer 进程。
+5. （可选）如果需要维修机器，在本步骤对机器进行短暂的维修。
 
-   1. 使用 `admin` 用户登录待停止进程的节点所在的机器。
+6. 启动 observer 进程。
 
-   2. 通过命令行工具进入 `/home/admin/oceanbase/bin` 目录。
+   1. 使用 `admin` 用户登录待启动进程的节点所在的机器。
 
-       ```bash
-       [admin@xxx oceanbase]$ cd /home/admin/oceanbase/bin
-       ```
-
-   3. 启动 observer 进程。
+   2. 启动 observer 进程。
 
       ```bash
-      [admin@xxx oceanbase]$ ./bin/observer
+      [admin@xxx ]$ cd /home/admin/oceanbase  &&  ./bin/observer
       ```
 
-   4. 进程启动后，5~10 秒钟后，执行以下命令，确认进程是否启动成功。
-
-      ```bash
-      [admin@xxx oceanbase]$ ps -ef | grep observer | grep -v grep
-      admin       6136      0 99 11:23 ?        00:00:19 ./bin/observer
-      ```
-
-      示例中，命令执行后有返回信息，表示进程已启动成功。如果命令执行后没有返回信息，则表示进程启动失败。
-
-   5. 执行以下命令，确认端口监听是否成功。
-
-      ```bash
-      [admin@xxx oceanbase]$ netstat -ntlp | grep `pidof observer`
-      tcp        0      0 0.0.0.0:2881            0.0.0.0:*               LISTEN      6136/./bin/observer
-      tcp        0      0 0.0.0.0:2882            0.0.0.0:*               LISTEN      6136/./bin/observer
-      ```
-
-      示例中，`6136/./bin/observer` 中的 `6136` 表示 observer 的进程 ID，从执行结果可知，端口监听成功。
-
-6. 执行以下命令，启动节点服务。
+7. 执行以下命令，启动节点服务。
 
    ```sql
    obclient [none]> ALTER SYSTEM START SERVER 'ip:port';
@@ -150,3 +130,15 @@
    执行成功后，可以查询 `oceanbase.DBA_OB_SERVERS` 视图中的 `START_SERVICE_TIME` 字段，该字段表示节点启动服务的时间。如果该值为 `NULL`，则表示该节点的服务还没有启动。
 
    查询 `oceanbase.DBA_OB_SERVERS` 视图的具体操作可参见 [查看节点](../2.view-the-cluster-composition/2.view-an-observer.md)。
+
+## 相关文档
+
+更多节点相关的运维操作，请参见以下信息：
+
+* [查看节点](2.view-an-observer.md)
+
+* [添加节点](4.add-a-node.md)
+
+* [删除节点](5.delete-a-node.md)
+
+* [隔离节点](6.isolation-a-node.md)
