--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/4.add-a-node.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/4.add-a-node.md
@@ -2,41 +2,51 @@
 
 当集群中的资源不够时，您可以通过增加节点来扩容。
 
-## 背景信息
-
-增加节点即是增加 OBServer 服务器。增加节点有以下两种场景：
-
-* 向已存在的 Zone 中增加 OBServer
-
-* 添加 zone 并向该 Zone 中增加 OBServer
-
 ## 前提条件
 
 * 请确认待增加的所有 OBServer 服务器已完成相关配置，具体操作可参见 [服务器配置](../../../4.deploy/3.preparations-before-deployment-1/2.server-configuration.md) 章节和 [部署环境配置](../../../../4.deploy/6.command-line-deployment/1.configure-a-deployment-environment-2/1.install-oat-cli.md)章节。
 
-* 对于需要增加 Zone 再向该 Zone 中增加 OBServer 节点的场景，请确认已增加 Zone，增加 Zone 的操作请参见 [增加 Zone](5.add-a-zone.md)。
+* 增加节点前需要为所有 OBServer 服务器安装数据库软件，请确认已从 OceanBase 技术支持人员处获取对应版本的 OceanBase 数据库软件安装包。
 
-* 增加节点前需要为所有 OBServer 服务器安装数据库软件，请确认已从部署人员处获取对应版本的 OceanBase 数据库软件安装包。
+## 操作步骤
 
-## 安装软件并创建目录
+1. （可选）如果需要增加 Zone 后再向该 Zone 中增加 OBServer 节点，请确认已增加 Zone，增加 Zone 的操作请参见 [增加 Zone](5.add-a-zone.md)。
 
-完成基本装机后，在增加节点前，需要为待增加的所有 OBServer 服务器安装数据库软件和创建目录。
+2. 通过 `ssh` 登录到待添加的 OBServer，进行安装前检查。
 
-1. 使用 `admin` 用户登录到待增加的 OBServer 服务器上。
+   1. 使用 `root` 用户依次登录到待增加的 OBServer 服务器上。
 
-2. 安装 OceanBase 数据库的 RPM 包。
+   2. 执行以下命令，开始检查。
+
+      ```bash
+      [root@xxx /]# cd /root/t-oceanbase-antman/clonescripts
+
+      [root@xxx clonescripts]# sh precheck.sh -m ob
+      ```
+
+   3. 执行以下命令，检查时钟同步情况，保证所有节点的时钟偏差在 100 ms 以内。
+
+      ```bash
+      [root@xxx /]# ntpdate $IP
+      ```
+
+      其中，$IP 表示集群中其他 OBServer 的 IP 地址。
+
+3. 通过 `ssh` 登录到待添加的 OBServer，安装 OceanBase 数据库的 RPM 包。
+
+   在增加节点前，需要为待增加的所有 OBServer 服务器安装数据库软件。
+
+   命令如下：
+
+   ```shell
+   [root@xxx /]# cd $rpm_dir
+   
+   [root@xxx $rpm_dir]# rpm -i --prefix=/home/admin/oceanbase $rpm_name
+   ```
 
    其中，`rpm_dir` 表示存放 RPM 包的目录；`$rpm_name` 表示 RPM 包的名称。
 
-   ```shell
-   [root@hostname /]# cd $rpm_dir
-   
-   [root@hostname $rpm_dir]# rpm -i --prefix=/home/admin/oceanbase $rpm_name
-   ```
-
-3. 在待增加的 OBServer 服务器上创建 `/data/1` 和 `/data/log1` 目录，并将目录的拥有者（Owner）修改为 `admin`。
-
-   通常情况下，使用 `/data/1` 作为数据目录，`/data/log1` 作为日志目录。
+4. 通常情况下，使用 `/data/1` 作为数据目录，`/data/log1` 作为日志目录。需要在待增加的 OBServer 服务器上创建 `/data/1` 和 `/data/log1` 目录，并将目录的拥有者（Owner）修改为 `admin`。
 
    ```shell
    [root@xxx /]# mkdir -p /data/1 /data/log1
@@ -54,7 +64,7 @@
    drwxr-xr-x 2 admin admin 4096 Nov 18 14:24 log1
    ```
 
-4. 初始化 OceanBase 数据库的目录。
+5. 初始化 OceanBase 数据库的目录。
 
    OceanBase 数据库的数据目录通常建议设置在独立的磁盘上，然后通过软链接方式链接到软件的 `Home` 目录下面。
 
@@ -80,34 +90,63 @@
    -bash-4.2$ for t in {clog,etc2,ilog,oob_clog};do ln -s /data/log1/obdemo/$t /home/admin/oceanbase/store/obdemo/$t; done
    ```
 
-5. 重复以上操作，直至所有 OBServer 服务器全部操作完成。
+6. 启动 observer 进程。
 
-## 增加节点
+   1. 使用 `admin` 用户登录到待增加的 OBServer 服务器上。
 
-本示例中以向 `Zone4` 中添加 3 台 OBServer 为例提供操作指导。
+   2. 设置 `admin` 用户的 ulimit。
 
-1. 启动 OBServer。
+      ```shell
+      [admin@xxx /]$ ulimit -s 10240; ulimit -c unlimited
+      ```
 
-   1. 以 `admin` 用户登录到任意一台待增加的 OBServer 服务器上。
+   3. 配置环境变量。
 
-   2. 执行以下命令，启动 OBServer。
+      ```shell
+      [admin@xxx /]$ export LD_LIBRARY_PATH=/home/admin/oceanbase/lib:$LD_LIBRARY_PATH LD_PRELOAD=''
+      ```
+
+   4. 执行以下命令，启动 observer 进程。
 
       语句如下：
 
       ```shell
-      [admin@xxx oceanbase]$ /home/admin/oceanbase/bin/observer -i eth0 -P xxxx -p xxxx -z $zone_name -d /home/admin/oceanbase/store/$cluster_name -r 'SVR_IP:SVR_PORT:SQL_PORT;SVR_IP:SVR_PORT:SQL_PORT;SVR_IP:SVR_PORT:SQL_PORT' -c cluster_id -n $cluster_name -o "memory_limit_percentage=90,memstore_limit_percentage=60,datafile_disk_percentage=80,config_additional_dir=/data/1/cluster_name/etc3;/data/log1/cluster_name/etc2"
+       [admin@xxx /]$ cd /home/admin/oceanbase
+
+      [admin@xxx oceanbase]$ ./bin/observer -i eth0 -c $cluster_id -p xxxx -P xxxx -z $zone_name -n $cluster_name -d ‘/home/admin/oceanbase/store/$cluster_name’ -r 'SVR_IP:SVR_PORT:SQL_PORT;SVR_IP:SVR_PORT:SQL_PORT;SVR_IP:SVR_PORT:SQL_PORT' -l WARN -o 'memory_limit=100GB,datafile_disk_percentage=85,config_additional_dir=/data/1/cluster_name/etc3;/data/log1/cluster_name/etc2'
       ```
 
       相关参数说明如下：
 
-      * `-P`：用于指定 RPC 端口号。
-      * `-p`：用于指定直连端口号。
-      * `-z`：用于指定待增加的 OBServer 所属的 Zone。
-      * `-d`：用于指定数据的存储目录。
-      * `-r`：用于指定待增加的 OBServer 的 IP 地址列表。
-      * `-c`：用于指定集群 ID。
-      * `-n`：用于指定集群名。
-      * `-o`：用于指定集群的启动配置项。
+      * `-i`：用于指定网卡名，需要根据当前机器环境修改。
+
+      * `-c`：用于指定集群 ID。其值可通过 `SHOW PARAMETERS LIKE 'cluster_id';` 语句获取。
+
+      * `-p`：用于指定 SQL 端口号。一般为 2881，除非有明确目的，一般不建议修改。
+
+      * `-P`：用于指定 RPC 端口号。一般为 2882，除非有明确目的，不建议修改。
+
+      * `-n`：用于指定集群名。本示例中集群名为 `obdemo`。
+
+      * `-z`：用于指定待加入的 Zone。
+
+      * `-d`：用于指定数据目录。
+
+      * `-r`：用于指定待添加的 OceanBase 集群的 RS 地址列表。
+
+      * `-l`：用于指定日志的级别，本示例中为 `WARN`，表示日志级别为 WARNING 级别。
+
+      * `-o`：用于指定集群的启动配置项。使用 `-o` 参数时，需满足以下条件：
+
+        * 不分大小写，但是推荐按照 `observer.config.bin` 中的名称来写。
+
+        * 配置项名不能包含以下特殊字符：空格、`\r`、`\n`、`\t`
+
+        * 配置项名和配置项值中间必须有等号（=）。
+
+        * 配置项之间使用英文逗号（,）进行分割。
+
+        示例中，`memory_limit=100GB` 表示进程启动内存上限为 100 GB；`datafile_disk_percentage=85`表示数据盘的占用比率为 85%。
 
       >**注意**
       >
@@ -116,10 +155,12 @@
       示例如下：
 
       ```shell
-      [admin@xxx oceanbase]$ /home/admin/oceanbase/bin/observer -i eth0 -P 2882 -p 2881 -z zone4 -d /home/admin/oceanbase/store/obdemo -r 'xx.xx.xx.10:2882:2881;xx.xx.xx.11:2882:2881;xx.xx.xx.12:2882:2881' -c 20190716 -n obdemo -o "memory_limit_percentage=90,memstore_limit_percentage=60,datafile_disk_percentage=80,config_additional_dir=/data/1/obdemo/etc3;/data/log1/obdemo/etc2"
+      [admin@xxx /]$ cd /home/admin/oceanbase
+
+      [admin@xxx oceanbase]$ ./bin/observer -i eth0 -c 20221216 -p 2881 -P 2882 -z 'zone4' -n 'obdemo' -d '/home/admin/oceanbase/store/obdemo' -r '10.10.10.1:2882:2881;10.10.10.2:2882:2881;10.10.10.3:2882:2881' -l WARN -o 'memory_limit=100GB,datafile_disk_percentage=85'
       ```
 
-2. 向集群中添加节点。
+7. 向集群中添加节点。
 
    1. 使用 `root` 用户登录到数据库的 `sys` 租户。
 
@@ -151,7 +192,7 @@
 
       该操作会将 OBServer 加入到服务列表，只有服务列表中的 OBServer 才可以提供服务。
 
-3. 执行成功后，可以查询 `oceanbase.DBA_OB_SERVERS` 视图进行确认。
+8. 执行成功后，可以查询 `oceanbase.DBA_OB_SERVERS` 视图进行确认。
 
    查询示例如下：
 
@@ -159,10 +200,22 @@
    obclient [none]> SELECT * FROM oceanbase.DBA_OB_SERVERS;
    ```
 
-   列表中有刚才添加的 OBServer，则表示添加成功。
+   列表中有刚刚添加的 OBServer，则表示添加成功。
 
 ## 后续操作
 
 * 对于向已存在的 Zone 中增加 OBServer 的场景，添加 OBServer 成功后，如果需要进一步使用该资源，还需要调整租户的资源配置，具体操作可参见[向 Zone 内添加 OBServer 节点](../../../7.reference/2.administrator-guide/7.o-m-management/2.scale-out-and-scale-in-1/2.cluster-level-scale-out-and-scale-in/1.scale-out/2.add-an-observer-node-to-a-zone.md)。
 
 * 对于添加 zone 并向该 Zone 中增加 OBServer 的场景，添加 OBServer 成功后，如果需要进一步使用该资源，还需要重新分配资源，并增加副本信息，具体操作可参见 [在集群中增加 Zone](../../../7.reference/2.administrator-guide/7.o-m-management/2.scale-out-and-scale-in-1/2.cluster-level-scale-out-and-scale-in/1.scale-out/1.add-a-zone-to-the-cluster.md)。
+
+## 相关文档
+
+更多节点相关的运维操作，请参见以下信息：
+
+* [查看节点](2.view-an-observer.md)
+
+* [重启节点](3.restart-a-node.md)
+
+* [删除节点](5.delete-a-node.md)
+
+* [隔离节点](6.isolation-a-node.md)
