合并文档 文件名问题修改

--- a/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/7.ddl-function-of-mysql-mode/6.foreign-key-operations-of-mysql-mode.md
+++ b/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/7.ddl-function-of-mysql-mode/6.foreign-key-operations-of-mysql-mode.md
@@ -1,63 +1,40 @@
-# 表操作
+# 外键操作
 
-OceanBase 数据库 MySQL 模式下的表操作包括修改行格式、修改块大小、转换字符集和重命名表。
+OceanBase 数据库 MySQL 模式下的外键操作包括添加外键和删除外键。
 
-## 修改行格式
+## 添加外键约束
 
-修改行格式的语法如下：
+添加外键约束的语法如下：
 
 ```sql
-ALTER TABLE table_name ROW_FORMAT = {DEFAULT | DYNAMIC | FIXED | COMPRESSED | REDUNDANT | COMPACT};
+ALTER TABLE table_name ADD CONSTRAINT fk_name FOREIGN KEY(column_name) 
+  REFERENCES table_name(column_name);
 ```
 
-修改行格式的语法如下：
+添加外键约束的示例如下：
 
 ```sql
-obclient> ALTER TABLE t1 ROW_FORMAT = COMPRESSED;
+obclient> CREATE TABLE t1(c1 INT,c2 VARCHAR(50));
+Query OK, 0 rows affected
+
+obclient> CREATE TABLE t2(c1 INT PRIMARY KEY,c2 VARCHAR(50));
+Query OK, 0 rows affected
+
+obclient> ALTER TABLE t1 ADD CONSTRAINT fk1 FOREIGN KEY(c1) REFERENCES t2(c1);
 Query OK, 0 rows affected
 ```
 
-## 修改块大小
+## 删除外键
 
-修改块大小的语法如下：
+删除外键约束的语法如下：
 
 ```sql
-ALTER TABLE table_name BLOCK_SIZE = value;
+ALTER TABLE table_name DROP FOREIGN KEY fk_name;
 ```
 
-修改块大小的示例如下：
+删除外键约束的示例如下：
 
 ```sql
-obclient> ALTER TABLE t1 BLOCK_SIZE = 1024;
-Query OK, 0 rows affected
-```
-
-## 转换字符集
-
-转换字符集的语法如下：
-
-```sql
-ALTER TABLE table_name CONVERT TO CHARACTER SET charset_name;
-```
-
-转换字符集的示例如下：
-
-```sql
-obclient> ALTER TABLE test_collation CONVERT TO CHARACTER SET utf8mb4 COLLATE utf8mb4_bin;
-Query OK, 0 rows affected
-```
-
-## 重命名表
-
-重命名表的语法如下：
-
-```sql
-ALTER TABLE old_tbl_name RENAME TO new_tbl_name;
-```
-
-重命名表的示例如下：
-
-```sql
-obclient> ALTER TABLE t1 RENAME TO t2;
+obclient> ALTER TABLE t1 DROP FOREIGN KEY fk1;
 Query OK, 0 rows affected
 ```
