--- a/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/7.ddl-function-of-mysql-mode/1.ddl-function-overview-of-mysql-mode.md
+++ b/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/7.ddl-function-of-mysql-mode/1.ddl-function-overview-of-mysql-mode.md
@@ -1,80 +1,13 @@
-# 索引操作
+# DDL 功能概述
 
-OceanBase 数据库 MySQL 模式下的索引操作包括创建索引、添加索引、删除索引和重命名索引。
+OceanBase 数据库的 DDL 功能用于用于数据库对象的变更。
 
-## 创建索引
+OceanBase 数据库 MySQL 模式下所支持的 DDL 功能如下：
 
-创建索引的语法如下：
-
-```sql
-CREATE INDEX index_name ON table_name (index_col_name,...);
-```
-
-在创建某表的索引时，该表仍可用于读取和写入操作。
-
-创建索引的示例如下：
-
-```sql
-obclient> CREATE TABLE tbl1 (c1 INT PRIMARY KEY, c2 VARCHAR(10));
-Query OK, 0 rows affected 
-  
-obclient> CREATE INDEX tbl1_idx ON tbl1 (c1, c2 ASC);
-Query OK, 0 rows affected 
-```
-
-## 添加索引
-
-添加索引的语法如下：
-
-```sql
-ALTER TABLE table_name ADD INDEX index_name (index_col_name,...);
-```
-
-添加索引的示例如下：
-
-```sql
-obclient> CREATE TABLE tbl2(c1 INT PRIMARY KEY,c2 INT);
-Query OK, 0 row affected
-
-obclient> ALTER TABLE tbl2 ADD INDEX ind1 (c1,c2);
-Query OK, 0 row affected
-```
-
-## 删除索引
-
-删除索引的语法包括两种，如下所示：
-
-```sql
-DROP INDEX index_name ON table_name;
-```
-
-```sql
-ALTER TABLE table_name DROP INDEX index_name;
-```
-
-在删除某表的索引时，该表仍可用于读取和写入操作。
-
-删除索引的示例如下：
-
-```sql
-obclient> ALTER TABLE tbl2 DROP INDEX ind1;
-Query OK, 0 row affected
-  
-obclient> DROP INDEX ind1 ON tbl2;
-Query OK, 0 rows affected
-```
-
-## 重命名索引
-
-重命名索引的语法如下：
-
-```sql
-ALTER TABLE table_name RENAME INDEX old_index_name TO new_index_name;
-```
-
-重命名索引的示例如下：
-
-```sql
-obclient> ALTER TABLE tbl2 RENAME INDEX ind1 TO ind2;
-Query OK, 0 rows affected
-```
+* 索引操作
+* 主键操作
+* 列操作
+* 生成列操作
+* 外键操作
+* 表操作
+* 分区操作
