--- a/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/7.ddl-function-of-mysql-mode/5.generated-column-operations-of-mysql-mode.md
+++ b/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/7.ddl-function-of-mysql-mode/5.generated-column-operations-of-mysql-mode.md
@@ -1,40 +1,98 @@
-# 外键操作
+# 生成列操作
 
-OceanBase 数据库 MySQL 模式下的外键操作包括添加外键和删除外键。
+OceanBase 数据库 MySQL 模式下 的生成列操作包括添加 `STORED` 列、修改 `STORED` 列、删除 `STORED` 列、添加 `VIRTUAL` 列、修改 `VIRTUAL` 列和删除 `VIRTUAL` 列。
 
-## 添加外键约束
+## 添加 STORED 列
 
-添加外键约束的语法如下：
+添加 `STORED` 列的语法如下：
 
 ```sql
-ALTER TABLE table_name ADD CONSTRAINT fk_name FOREIGN KEY(column_name) 
-  REFERENCES table_name(column_name);
+ALTER TABLE table_name ADD COLUMN (column_name INT GENERATED ALWAYS AS
+     (column_expression) STORED);
 ```
 
-添加外键约束的示例如下：
+添加 `STORED` 列的示例如下：
 
 ```sql
 obclient> CREATE TABLE t1(c1 INT,c2 VARCHAR(50));
 Query OK, 0 rows affected
 
-obclient> CREATE TABLE t2(c1 INT PRIMARY KEY,c2 VARCHAR(50));
-Query OK, 0 rows affected
+obclient> ALTER TABLE t1 ADD COLUMN (c3 INT GENERATED ALWAYS AS (c1 + 1) STORED);
+Query OK, 0 rows affected 
+```
+<!--修改 STORED 列
 
-obclient> ALTER TABLE t1 ADD CONSTRAINT fk1 FOREIGN KEY(c1) REFERENCES t2(c1);
+修改 `STORED` 列的语法如下：
+```sql
+ALTER TABLE table_name MODIFY COLUMN column_name INT GENERATED ALWAYS AS
+     (column_expression) STORED;
+```
+
+添加 `STORED` 列的示例如下：
+```sql
+obclient> ALTER TABLE t1 MODIFY COLUMN c3 INT GENERATED ALWAYS AS (c1 + 11) STORED;
+Query OK, 0 rows affected 
+```
+-->
+
+## 删除 STORED 列
+
+删除 `STORED` 列的语法如下：
+
+```sql
+ALTER TABLE table_name DROP COLUMN column_name;
+```
+
+删除 `STORED` 列的示例如下：
+
+```sql
+obclient> ALTER TABLE t1 DROP COLUMN c3;
 Query OK, 0 rows affected
 ```
 
-## 删除外键
+## 添加 VIRTUAL 列
 
-删除外键约束的语法如下：
+添加 `VIRTUAL` 列的语法如下：
 
 ```sql
-ALTER TABLE table_name DROP FOREIGN KEY fk_name;
+ALTER TABLE table_name MODIFY COLUMN column_name INT GENERATED ALWAYS AS
+     (column_expression) VIRTUAL;
 ```
 
-删除外键约束的示例如下：
+添加 `VIRTUAL` 列的示例如下：
 
 ```sql
-obclient> ALTER TABLE t1 DROP FOREIGN KEY fk1;
+obclient> ALTER TABLE t1 ADD COLUMN (c3 INT GENERATED ALWAYS AS (c1 + 1) VIRTUAL);
+Query OK, 0 rows affected
+```
+
+## 修改 VIRTUAL 列
+
+修改 `VIRTUAL` 列的语法如下：
+
+```sql
+ALTER TABLE table_name MODIFY COLUMN column_name INT GENERATED ALWAYS AS
+     (column_expression) VIRTUAL;
+```
+
+添加 `VIRTUAL` 列的示例如下：
+
+```sql
+obclient> ALTER TABLE t1 MODIFY COLUMN c3 INT GENERATED ALWAYS AS (c1 + 11) VIRTUAL;
+Query OK, 0 rows affected 
+```
+
+## 删除 VIRTUAL 列
+
+删除 `VIRTUAL` 列的语法如下：
+
+```sql
+ALTER TABLE table_name DROP COLUMN column_name;
+```
+
+删除 `VIRTUAL` 列的示例如下：
+
+```sql
+obclient> ALTER TABLE t1 DROP COLUMN c3;
 Query OK, 0 rows affected
 ```
