--- a/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/7.ddl-function-of-mysql-mode/7.table-operations-of-mysql-mode.md
+++ b/zh-CN/7.reference/4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/7.ddl-function-of-mysql-mode/7.table-operations-of-mysql-mode.md
@@ -1,132 +1,63 @@
-# 分区操作
+# 表操作
 
-OceanBase 数据库 MySQL 模式下的分区操作包括重分区、添加分区、删除分区和清空分区。
+OceanBase 数据库 MySQL 模式下的表操作包括修改行格式、修改块大小、转换字符集和重命名表。
 
-## 重分区
+## 修改行格式
 
-重分区的语法如下：
+修改行格式的语法如下：
 
 ```sql
-ALTER TABLE table_name PARTITION BY (partition_definitions);
+ALTER TABLE table_name ROW_FORMAT = {DEFAULT | DYNAMIC | FIXED | COMPRESSED | REDUNDANT | COMPACT};
 ```
 
-### 重分区示例
-
-#### 将 Hash 分区更改为 Key 分区方式的示例
+修改行格式的语法如下：
 
 ```sql
-obclient> CREATE TABLE tbl2(c1 INT, c2 DATETIME, PRIMARY KEY(c1, c2)) 
-PARTITION BY HASH(c1) PARTITIONS 4;
-Query OK, 0 rows affected
-
-obclient> ALTER TABLE tbl2 PARTITION BY KEY(c1) PARTITIONS 10;
+obclient> ALTER TABLE t1 ROW_FORMAT = COMPRESSED;
 Query OK, 0 rows affected
 ```
 
-#### 将一级 Hash 分区表修改为模板化 Hash+Range 二级分区表的示例
+## 修改块大小
+
+修改块大小的语法如下：
 
 ```sql
-obclient> ALTER TABLE tbl2 
-       PARTITION BY HASH(c1)
-                SUBPARTITION BY RANGE COLUMNS(c2)
-                SUBPARTITION TEMPLATE(
-                SUBPARTITION p1 VALUES LESS THAN ('2016-10-10'),
-                SUBPARTITION p2 VALUES LESS THAN ('2116-3-30')) PARTITIONS 2;
+ALTER TABLE table_name BLOCK_SIZE = value;
+```
+
+修改块大小的示例如下：
+
+```sql
+obclient> ALTER TABLE t1 BLOCK_SIZE = 1024;
 Query OK, 0 rows affected
 ```
 
-#### 将 Hash + Range 二级分区表转为 Range Columns+Range Columns 分区示例
+## 转换字符集
+
+转换字符集的语法如下：
 
 ```sql
-obclient> ALTER TABLE tbl2
-   PARTITION BY RANGE COLUMNS(c1)
-    SUBPARTITION BY RANGE COLUMNS(c2)
-  (
-  PARTITION p0 VALUES LESS THAN (100)
-  (SUBPARTITION sp0 VALUES LESS THAN ('2020-01-01')
-  ,SUBPARTITION sp1 VALUES LESS THAN  ('2021-01-01')
-  ,SUBPARTITION sp2 VALUES LESS THAN ('2022-01-01')
-  ,SUBPARTITION sp3 VALUES LESS THAN  ('2023-01-01')
-  ),
-  PARTITION p1 VALUES LESS THAN (200)
-  (SUBPARTITION sp4 VALUES LESS THAN ('2020-01-01')
-  ,SUBPARTITION sp5 VALUES LESS THAN  ('2021-01-01')
-  ,SUBPARTITION sp6 VALUES LESS THAN ('2022-01-01')
-  ,SUBPARTITION sp7 VALUES LESS THAN  ('2023-01-01'))
-  );
+ALTER TABLE table_name CONVERT TO CHARACTER SET charset_name;
+```
+
+转换字符集的示例如下：
+
+```sql
+obclient> ALTER TABLE test_collation CONVERT TO CHARACTER SET utf8mb4 COLLATE utf8mb4_bin;
 Query OK, 0 rows affected
 ```
 
-## 添加分区
+## 重命名表
 
-添加分区的语法如下：
+重命名表的语法如下：
 
 ```sql
-ALTER TABLE table_name ADD PARTITION (partition_definition)
+ALTER TABLE old_tbl_name RENAME TO new_tbl_name;
 ```
 
-添加分区的示例如下：
+重命名表的示例如下：
 
 ```sql
-obclient> CREATE TABLE t_log_part_by_range (
-      log_id      bigint NOT NULL 
-      , log_value varchar(50)
-      , log_date  timestamp NOT NULL  
-  ) PARTITION BY RANGE(UNIX_TIMESTAMP(log_date)) 
-  (
-      PARTITION M202001 VALUES LESS THAN(UNIX_TIMESTAMP('2020/02/01'))
-      , PARTITION M202002 VALUES LESS THAN(UNIX_TIMESTAMP('2020/03/01'))
-      , PARTITION M202003 VALUES LESS THAN(UNIX_TIMESTAMP('2020/04/01'))
-      , PARTITION M202004 VALUES LESS THAN(UNIX_TIMESTAMP('2020/05/01'))
-      , PARTITION M202005 VALUES LESS THAN(UNIX_TIMESTAMP('2020/06/01'))
-  );
-  Query OK, 0 rows affected
-  
-  obclient> ALTER TABLE t_log_part_by_range ADD PARTITION 
-           (PARTITION M202006 VALUES LESS THAN(UNIX_TIMESTAMP('2020/07/01'))
-           );
-```
-
-## 删除分区
-
-删除分区的语法如下：
-
-```sql
-ALTER TABLE table_name DROP PARTITION partition_name;
-```
-
-删除分区的示例如下：
-
-```sql
-obclient> ALTER TABLE t_log_part_by_range DROP PARTITION M202006;
+obclient> ALTER TABLE t1 RENAME TO t2;
 Query OK, 0 rows affected
-```
-
-## 清空分区
-
-清空分区的语法如下:
-
-```sql
-ALTER TABLE table_name TRUNCATE PARTITION partition_name;
-```
-
-清空分区的示例如下：
-
-```sql
- obclient> CREATE TABLE t_log_part_by_range (
-      log_id      bigint NOT NULL 
-      , log_value varchar(50)
-      , log_date  timestamp NOT NULL  
-  ) PARTITION BY RANGE(UNIX_TIMESTAMP(log_date)) 
-  (
-      PARTITION M202001 VALUES LESS THAN(UNIX_TIMESTAMP('2020/02/01'))
-      , PARTITION M202002 VALUES LESS THAN(UNIX_TIMESTAMP('2020/03/01'))
-      , PARTITION M202003 VALUES LESS THAN(UNIX_TIMESTAMP('2020/04/01'))
-      , PARTITION M202004 VALUES LESS THAN(UNIX_TIMESTAMP('2020/05/01'))
-      , PARTITION M202005 VALUES LESS THAN(UNIX_TIMESTAMP('2020/06/01'))
-  );
-  Query OK, 0 rows affected 
-  
-  obclient> ALTER TABLE t_log_part_by_range TRUNCATE PARTITION M202001, M202002;
-  Query OK, 0 rows affected 
 ```
