补充示例回显

--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/5.delete-a-node.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/5.delete-a-node.md
@@ -26,6 +26,25 @@ Delete Server 操作涉及到负载均衡，被删除的节点上的资源单元
 
       ```sql
       obclient [none]> SELECT UNIT_ID,TENANT_ID,STATUS,ZONE,SVR_IP FROM oceanbase.DBA_OB_UNITS;
+      +---------+-----------+--------+-------+----------------+
+      | UNIT_ID | TENANT_ID | STATUS | ZONE  | SVR_IP         |
+      +---------+-----------+--------+-------+----------------+
+      |       1 |         1 | ACTIVE | zone1 |   xx.xx.xx.237 |
+      |       2 |         1 | ACTIVE | zone2 |   xx.xx.xx.238 |
+      |       3 |         1 | ACTIVE | zone3 |   xx.xx.xx.218 |
+      |    1001 |      1002 | ACTIVE | zone3 |   xx.xx.xx.218 |
+      |    1002 |      1002 | ACTIVE | zone1 |   xx.xx.xx.237 |
+      |    1003 |      1002 | ACTIVE | zone2 |   xx.xx.xx.238 |
+      |    1010 |      1008 | ACTIVE | zone3 |   xx.xx.xx.218 |
+      |    1011 |      1008 | ACTIVE | zone2 |   xx.xx.xx.238 |
+      |    1012 |      1008 | ACTIVE | zone1 |   xx.xx.xx.237 |
+      |    1013 |      1010 | ACTIVE | zone3 |   xx.xx.xx.218 |
+      |    1014 |      1010 | ACTIVE | zone1 |   xx.xx.xx.237 |
+      |    1015 |      1010 | ACTIVE | zone2 |   xx.xx.xx.238 |
+      |    1016 |      NULL | ACTIVE | zone1 |   xx.xx.xx.237 |
+      |    1017 |      NULL | ACTIVE | zone2 |   xx.xx.xx.238 |
+      +---------+-----------+--------+-------+----------------+
+      14 rows in set
       ```
 
    2. 根据查询结果，执行以下命令，手动迁移 Unit。
@@ -44,10 +63,10 @@ Delete Server 操作涉及到负载均衡，被删除的节点上的资源单元
 
        * `port`：指定 Unit 迁移后的节点的 RPC 端口。
 
-      将 ID 为 `1001` 的 Unit 迁移到同 Zone 的 `xx.xx.xx.11` 服务器上的示例如下：
+      将 ID 为 `1012` 的 Unit 迁移到同 Zone 的 `xx.xx.xx.218` 服务器上的示例如下：
 
       ```sql
-      obclient [none]> ALTER SYSTEM MIGRATE UNIT = unit_id DESTINATION = 'xx.xx.xx.11:2882'; 
+      obclient [none]> ALTER SYSTEM MIGRATE UNIT = 1012 DESTINATION = 'xx.xx.xx.218:2882'; 
       ```
 
 3. 执行以下命令，删除 OBServer。
@@ -69,10 +88,10 @@ Delete Server 操作涉及到负载均衡，被删除的节点上的资源单元
    删除 `zone4` 中的一台 OBServer，示例如下：
 
    ```sql
-   obclient [none]> ALTER SYSTEM DELETE SERVER "xx.xx.xx.10:2882" zone='zone4'
+   obclient [none]> ALTER SYSTEM DELETE SERVER "xx.xx.xx.237:2882" zone='zone1'
    ```
 
-4. 待所有操作结束后，查询 `oceanbase.DBA_OB_SERVERS` 视图，确认节点是否删除成功。
+2. 待所有操作结束后，查询 `oceanbase.DBA_OB_SERVERS` 视图，确认节点是否删除成功。
 
    ```sql
    obclient [none]> SELECT * FROM oceanbase.DBA_OB_SERVERS;
@@ -113,7 +132,7 @@ Cancel Delete Server 的具体操作如下：
    示例如下：
 
    ```sql
-   obclient [none]> ALTER SYSTEM CANCEL DELETE SERVER 'xx.xx.xx.10:2882' zone='zone4';
+   obclient [none]> ALTER SYSTEM CANCEL DELETE SERVER 'xx.xx.xx.237:2882' zone='zone1';
    ```
 
 3. 查询 `oceanbase.DBA_OB_SERVERS` 视图，确认节点是否取消删除成功。
