--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/6.isolation-a-node.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/6.isolation-a-node.md
@@ -134,6 +134,12 @@
 
 ## 相关文档
 
-* [查看节点](../2.view-the-cluster-composition/2.view-an-observer.md)
+更多节点相关的运维操作，请参见以下信息：
 
-* [重启节点](1.restart-a-node.md)
+* [查看节点](2.view-an-observer.md)
+
+* [重启节点](3.restart-a-node.md)
+
+* [添加节点](2.add-a-node.md)
+
+* [删除节点](5.delete-a-node.md)
